feat(style): update SymbolsGrid to actually display a grid
- created a new css class SymbolsGrid__grid with proper layout
- implemented new class in SymbolsGrid component
- fixed SymbolsCard border-radius

--- a/frontend/src/components/SymbolCard/symbolCard.css
+++ b/frontend/src/components/SymbolCard/symbolCard.css
@@ -1,6 +1,6 @@
 .symbolCard {
   background-color: var(--colorWhite);
-  border-radius: 4px 4px 0 0;
+  border-radius: 4px;
   cursor: pointer;
 }
 
