--- a/frontend/src/components/SymbolCard/symbolCard.css
+++ b/frontend/src/components/SymbolCard/symbolCard.css
@@ -2,6 +2,7 @@
   background-color: var(--colorWhite);
   border-radius: 4px;
   cursor: pointer;
+  transition: all 0.2s ease-in-out;
 }
 
 .symbolCard__header {
@@ -33,6 +34,16 @@
 .symbolCard__price__value {
   font-size: 20px;
   font-weight: bold;
+}
+
+.symbolCard--selected {
+  transform: scale(1.04);
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.4);
+
+}
+
+.symbolCard--notSelected {
+  transform: scale(0.94);
 }
 
 .symbolCard__shake {
