--- a/frontend/src/components/SymbolCard/symbolCard.css
+++ b/frontend/src/components/SymbolCard/symbolCard.css
@@ -3,6 +3,8 @@
   border-radius: 4px;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
+  --scale-value: 1;
+  transform: scale(var(--scale-value));
 }
 
 .symbolCard__header {
@@ -37,13 +39,49 @@
 }
 
 .symbolCard--selected {
-  transform: scale(1.04);
+  --scale-value: 1.04;
+  transform: scale(var(--scale-value));
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.4);
-
 }
 
 .symbolCard--notSelected {
-  transform: scale(0.94);
+  --scale-value: 0.94;
+  transform: scale(var(--scale-value));
+}
+
+
+.symbolCard__flashGreen {
+  box-shadow: 0px 0px 15px 5px rgba(0, 255, 0, 0.6);
+  animation: flashGreen 1s ease-in-out;
+}
+
+@keyframes flashGreen {
+
+  0%,
+  100% {
+    box-shadow: 0px 0px 15px 5px rgba(0, 255, 0, 0.6);
+  }
+
+  50% {
+    box-shadow: 0px 0px 25px 10px rgba(144, 238, 144, 0.8);
+  }
+}
+
+.symbolCard__flashRed {
+  box-shadow: 0px 0px 15px 5px rgba(255, 0, 0, 0.6);
+  animation: flashRed 1s ease-in-out;
+}
+
+@keyframes flashRed {
+
+  0%,
+  100% {
+    box-shadow: 0px 0px 15px 5px rgba(255, 0, 0, 0.6);
+  }
+
+  50% {
+    box-shadow: 0px 0px 25px 10px rgba(255, 99, 71, 0.8);
+  }
 }
 
 .symbolCard__shake {
@@ -52,14 +90,19 @@
 
 @keyframes shake {
 
+  0%,
+  100% {
+    transform: scale(var(--scale-value)) translateX(0);
+  }
+
   10%,
   90% {
-    transform: translateX(-2px);
+    transform: scale(var(--scale-value)) translateX(-2px);
   }
 
   20%,
   80% {
-    transform: translateX(4px);
+    transform: scale(var(--scale-value)) translateX(4px);
   }
 
   25%,
@@ -68,7 +111,7 @@
   55%,
   65%,
   75% {
-    transform: translateX(-6px);
+    transform: scale(var(--scale-value)) translateX(-6px);
   }
 
   30%,
@@ -76,6 +119,6 @@
   50%,
   60%,
   70% {
-    transform: translateX(6px);
+    transform: scale(var(--scale-value)) translateX(6px);
   }
 }
