style(SymbolsView): fix style margin on content
- Add margin to symbolsView__Content to match parent style

--- a/frontend/src/components/SymbolsView/symbolsView.css
+++ b/frontend/src/components/SymbolsView/symbolsView.css
@@ -1,7 +1,7 @@
 .symbolsView__content {
     display: flex;
     flex-direction: row-reverse;
-    margin-top: 24px;
+    margin: 24px 8px 0px 0px
 }
 
 .symbolsView__cards {
